defaults/zonemodel/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    deployment-zone: jwennerb
    security-zone: frontend
  name: jwennerb
